# MEng-PROJ500-2025-26

./: .gitignore  README.md  README_IMPORTANT_PATHS.md  README_PROJECT_MAP.md  README_QUICKSTART.md  joint_limit_results.csv  power_shell_commands  thor_policy_runner.py
Charlie/: README.md
Charlie/KiCad/PROJ500 - Auxillary IMU Board/: PROJ500 - Auxillary IMU Board.kicad_pcb  PROJ500 - Auxillary IMU Board.kicad_prl  PROJ500 - Auxillary IMU Board.kicad_pro  PROJ500 - Auxillary IMU Board.kicad_sch  PROJ500 - Auxillary IMU Board.step
Charlie/KiCad/PROJ500 - Braking Chopper Controller/: PROJ500 - Braking Chopper Controller.kicad_pcb  PROJ500 - Braking Chopper Controller.kicad_prl  PROJ500 - Braking Chopper Controller.kicad_pro  PROJ500 - Braking Chopper Controller.kicad_sch  PROJ500 - Braking Chopper Controller.step  fp-info-cache  fp-lib-table  sym-lib-table
Charlie/KiCad/PROJ500 - Power Distribution Board/: Aux_Outputs.kicad_sch  Coil_Driver.kicad_sch  Comparators.kicad_sch  FPGA.kicad_sch  MCU.kicad_sch  PROJ500 - Power Distribution Board.csv  PROJ500 - Power Distribution Board.kicad_pcb  PROJ500 - Power Distribution Board.kicad_prl  PROJ500 - Power Distribution Board.kicad_pro  PROJ500 - Power Distribution Board.kicad_sch  PROJ500 - Power Distribution Board.net  PROJ500 - Power Distribution Board_log_missing3Dmodels.txt  PROJ500 - Power Distribution Board_missing3Dmodels.txt  fp-lib-table  safety_logic.kicad_sch  sym-lib-table
Charlie/KiCad/PROJ500 - Power Supply Board/: AP62200 - 5V 2A.kicad_sch  Hot Swap Switch.kicad_sch  MIC28517 - 12V 4A.kicad_sch  MIC28517 - 24V 8A.kicad_sch  PROJ500 - Power Supply Board-testpoints.csv  Shunt Amplifiers.kicad_sch  (+13 more)
Charlie/PROJ500_PDU_FPGA/: .common_gui.ini  .floorplanner.ini  .run_manager.ini  .setting.ini  .spreadsheet_view.ini  FPGA JTAG - 02x05 IDC HEADER.txt  PDU FPGA - Lattice File.csv  PDU FPGA Pin Layout.csv  PDU FPGA Pinout.csv  PDU_EFB_I2C.edn  PDU_EFB_I2C.ipx  PDU_EFB_I2C.lpc  PDU_EFB_I2C.srp  PDU_EFB_I2C.v  PDU_EFB_I2C_sim.v  PDU_EFB_I2C_tmpl.v  PROJ500_PDU_FPGA.ldf  PROJ500_PDU_FPGA.lpf  PROJ500_PDU_FPGA_tcl.html  generate_core.tcl  generate_ngd.tcl  pdu_glue_mxo2 - Copy fix.sv  pdu_glue_mxo2.sv  pdu_glue_synth.sdc  pdu_selftest_mxo2.sv  promote.xml  reportview.xml  sim_out.txt  sso_rpt.htm  tb_pdu_glue.sv  tb_pdu_selftest_mxo2.sv  transcript  vsim.wlf
Charlie/STM32Cube/: STLINK - 02x05 IDC HEADER.txt
Software/: ROS_STM32_INTEGRATION.md  TERMINAL_COMMANDS.md
Software/install/: local_setup.sh  setup.sh
Software/log/: latest_build
Software/nucleo/: manual_text.txt  platformio.ini  test_2motors.py  test_44_sequence.py  test_continuous_movement.py  test_diagnostic.py  test_jog_movement.py  test_known_good_frames.py  test_motor.py  test_probe_id_version.py
Software/nucleo_can_bridge/: change_id_usb_can.py  example_integration.py  multi_motor_command.py  pc_control.py  pc_control_2motors.py  platformio.ini  probe_motor_ids.py  set_motor_id.py  test_boot.py  test_bridge.py  test_motor.py
Software/src/motor_control/: CMakeLists.txt  PRETTY_ROBOT_MOVES.md  README.md  package.xml
Software/src/motor_control/launch/: LAUNCH_FILES_GUIDE.md  multi_motor_launch.py  multi_state_launch.py  pretty_robot_moves_launch.py  rcu_bench_test_launch.py  rcu_diagnosis_launch.py  rcu_launch.py  rcu_right_bus_only_launch.py  rcu_split_bus_test_launch.py  rl_robot_launch.py  single_motor_launch.py  thor_12_motor_pipeline_launch.py
Software/src/motor_control/motor_control/: common.py  pretty_robot_moves.py  pretty_robot_moves_joint_limits.json  rcu_protocol.py  ros_topic_gui.py
Software/src/motor_control/motor_control/bridges/: ethernet_can_bridge.py  rcu_udp_bridge.py  robot_command_bridge.py  robot_observation_bridge.py  serial_can_bridge.py
Software/src/motor_control/motor_control/sensors/: imu_publisher.py  motor_feedback_listener.py
Software/src/motor_control/motor_control/testing/: enable_motors.py  hold_position_test.py  motor_controller_test.py  motor_pub.py  multi_motor_test.py  multi_state_motor_test.py  rcu_bench_command_test.py  sequential_motor_zero.py  single_motor_test.py
Software/src/motor_control/msg/: MotorFeedback.msg  MotorParam.msg  RobotCommand.msg
Software/src/motor_control/testing/: IMU Testing  TESTING_GUIDE.md
Software/src/motor_test/: CMakeLists.txt  README.md  package.xml
Software/src/motor_test/launch/: motor_control_launch.py  motor_test_launch.py  multi_motor_launch.py  multi_state_launch.py  rl_robot_launch.py  single_motor_launch.py
Software/src/motor_test/motor_test/: common.py  ethernet_can_bridge.py  motor_can_bridge.py  motor_can_publisher.py  motor_feedback_listener.py  motor_pub.py  robot_command_bridge.py  robot_observation_bridge.py  serial_can_bridge.py
Software/src/motor_test/motor_test/bridges/: ethernet_can_bridge.py  robot_command_bridge.py  robot_observation_bridge.py  serial_can_bridge.py
Software/src/motor_test/motor_test/sensors/: imu_publisher.py  motor_feedback_listener.py
Software/src/motor_test/motor_test/testing/: motor_controller_test.py  motor_pub.py  multi_motor_test.py  multi_state_motor_test.py  single_motor_test.py
Software/src/motor_test/msg/: MotorFeedback.msg  RobotCommand.msg  RobotObservation.msg
Software/src/motor_test/src/: motor_sub.cpp
Software/stm_firmware/: README_build.md  build_firmware.ps1  setup_portable_toolchain.ps1
hardware/: 21-04-26_10-24.txt
hardware/policy/: standing.pt  standing_policy.pt  standing_policy_200.pt  walking_policy.pt
hardware/testbench logs/: 21-04-26_11-03_STAGE-B.txt
hardware/thor/: LINUX_STARTUP_CHECKLIST.md  sequential_motor_zero.py  startup_then_policy_runner.py  startup_to_standing.py  thor_policy_runner.py
nucleo_can_bridge/: pc_control.py  platformio.ini  test_2motors.py  test_boot.py  test_bridge.py  test_motor.py
report/: final_report.md
simulation/: .gitignore  README.md
simulation/docs/: README.md  joint_limit_results.xlsx  ~$joint_limit_results.xlsx
simulation/isaac/: README.md  robot.f3d  robot.step  robot.usd  skeleton.usd
simulation/results/: joint_torque_saturation_results.csv
(+1454 files in other folders)
